Change asset urls

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
                         </article>
                     </li>
                     <li>
-                        <article class="post photo" style="background-image:url(/img/walking2.jpg) ">
+                        <article class="post photo" style="background-image:url(img/walking2.jpg) ">
                           <header class="preamble clearfix">
                             <span>Ecublens</span>
                             <time>25.11.15</time>
@@ -63,7 +63,7 @@
                             <time>25.4.10</time>
                           </header>
                           <section class="content">
-                            <img src="/img/walking.jpeg">
+                            <img src="img/walking.jpeg">
                             <p>
 Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer städtebaulichen Schnit kante; hier gehen die grossmassstäblichen Bauten der Universität Zürich in die kleinteilige Quartierstrukturen über. An dieser Bruchstelle benötigt
                             </p>
@@ -122,7 +122,7 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                         </article>
                     </li>
                     <li>
-                        <article class="post photo portrait" style="background-image:url(/img/fernsehturm.jpg) ">
+                        <article class="post photo portrait" style="background-image:url(img/fernsehturm.jpg) ">
                           <header class="preamble clearfix">
                             <span>Ecublens</span>
                             <time>25.11.15</time>
@@ -149,7 +149,7 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                         </article>
                     </li>
                     <li>
-                        <article class="post video" style="background-image: url(/img/waves.jpg)">
+                        <article class="post video" style="background-image: url(img/waves.jpg)">
                           <header class="preamble clearfix">
                             <span>Video</span>
                             <time>25.11.14</time>
