Be more mobile friendly
* Implement a hamburger nav

--- a/index.html
+++ b/index.html
@@ -19,6 +19,11 @@
             <header class="primary-header">
                 <h1 class="site-title"><a href="#home">VdW</a></h1>
                 <nav class="primary-nav">
+                    <input class="toggle-menu" type="checkbox">
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                    <span class="hamburger-line"></span>
+                    <div class="white"></div>
                     <ul class="list-inline">
                         <li><a href="#home">Aktuelles</a></li>
                         <li><a href="#projekte">Projekte</a></li>
