Add lines to projects section
* Remove bad umlautted characters

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
                     <li>
                         <article class="post text">
                           <header class="preamble clearfix">
-                            <span>Dübendorf</span>
+                            <span>Dübendorf</span>
                             <time>25.4.16</time>
                           </header>
                           <section class="content">
                             <h2>ES GEHT VORAN</h2>
                             <p>
-                                Die Erweiterung des Institutsgebäu- des an der Plattenstrasse liegt an einer städtebaulichen Schnitt- kan- te; hier gehen die grossmassstäbli- chen Bauten der Universität Zürich in die kleinteilige Quartierstruk- turen über. An dieser Bruchstelle benötigt die Stadt keinen neuen Akzent, sondern einen massge- schneiderten Baukörper, der den Ort unaufgeregt weiterentwickelt. So bildet der Erweiterungsbau rück- seitig einen, der Bibliothek zugehö- rigen, gefassten Aussenraum. Die tung stilistisch stark determiniert.
+                                Die Erweiterung des Institutsgebäu- des an der Plattenstrasse liegt an einer städtebaulichen Schnitt- kan- te; hier gehen die grossmassstäbli- chen Bauten der Universität Zürich in die kleinteilige Quartierstruk- turen über. An dieser Bruchstelle benötigt die Stadt keinen neuen Akzent, sondern einen massge- schneiderten Baukörper, der den Ort unaufgeregt weiterentwickelt. So bildet der Erweiterungsbau rück- seitig einen, der Bibliothek zugehö- rigen, gefassten Aussenraum. Die tung stilistisch stark determiniert.
                             </p>
                           </section>
                           <section class="actions">
@@ -69,7 +69,7 @@
                           <section class="content">
                             <img src="img/walking.jpeg">
                             <p>
-Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer städtebaulichen Schnit kante; hier gehen die grossmassstäblichen Bauten der Universität Zürich in die kleinteilige Quartierstrukturen über. An dieser Bruchstelle benötigt
+Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer städtebaulichen Schnit kante; hier gehen die grossmassstäblichen Bauten der Universität Zürich in die kleinteilige Quartierstrukturen über. An dieser Bruchstelle benötigt
                             </p>
                           </section>
                         </article>
@@ -83,7 +83,7 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                           <section class="content">
                             <h2>GESUCHT</h2>
                             <p>
-10 Praktikanten zum Website Daten einfüllen. Ab sofort, mit Kafipause
+10 Praktikanten zum Website Daten einfüllen. Ab sofort, mit Kafipause
                             </p>
                           </section>
                           <section class="actions">
@@ -102,7 +102,7 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                           </header>
                           <section class="content">
                             <p>
-                                „Gewässerraum Siedlungsgebiet“ 32:57 min
+                                „Gewässerraum Siedlungsgebiet“ 32:57 min
                             </p>
                           </section>
                           <section class="actions">
@@ -136,13 +136,13 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                     <li>
                         <article class="post text">
                           <header class="preamble clearfix">
-                            <span>Dübendorf</span>
+                            <span>Dübendorf</span>
                             <time>25.4.16</time>
                           </header>
                           <section class="content">
                             <h2>ES GEHT VORAN</h2>
                             <p>
-                                Die Erweiterung des Institutsgebäu- des an der Plattenstrasse liegt an einer städtebaulichen Schnitt- kan- te; hier gehen die grossmassstäbli- chen Bauten der Universität Zürich in die kleinteilige Quartierstruk- turen über. An dieser Bruchstelle benötigt die Stadt keinen neuen Akzent, sondern einen massge- schneiderten Baukörper, der den Ort unaufgeregt weiterentwickelt. So bildet der Erweiterungsbau rück- seitig einen, der Bibliothek zugehö- rigen, gefassten Aussenraum. Die tung stilistisch stark determiniert.
+                                Die Erweiterung des Institutsgebäu- des an der Plattenstrasse liegt an einer städtebaulichen Schnitt- kan- te; hier gehen die grossmassstäbli- chen Bauten der Universität Zürich in die kleinteilige Quartierstruk- turen über. An dieser Bruchstelle benötigt die Stadt keinen neuen Akzent, sondern einen massge- schneiderten Baukörper, der den Ort unaufgeregt weiterentwickelt. So bildet der Erweiterungsbau rück- seitig einen, der Bibliothek zugehö- rigen, gefassten Aussenraum. Die tung stilistisch stark determiniert.
                             </p>
                           </section>
                           <section class="actions">
@@ -174,7 +174,7 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                           <section class="content">
                             <h2>GESUCHT</h2>
                             <p>
-10 Praktikanten zum Website Daten einfüllen. Ab sofort, mit Kafipause
+10 Praktikanten zum Website Daten einfüllen. Ab sofort, mit Kafipause
                             </p>
                           </section>
                           <section class="actions">
@@ -193,7 +193,7 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                           </header>
                           <section class="content">
                             <p>
-                                „Gewässerraum Siedlungsgebiet“ 32:57 min
+                                „Gewässerraum Siedlungsgebiet“ 32:57 min
                             </p>
                           </section>
                           <section class="actions">
@@ -212,6 +212,9 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                                 <td>Ort ▼</td>
                                 <td>Jahr</td>
                             </tr>
+                            <tr>
+                                <td class="divider" colspan="3"></td>
+                            </tr>
                         </thead>
                         <tbody>
                             <tr>
@@ -220,9 +223,15 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                                 <td>2014</td>
                             </tr>
                             <tr>
+                                <td class="divider" colspan="3"></td>
+                            </tr>
+                            <tr>
                                 <td>ut eos adhuc accusam accusamus</td>
                                 <td>Vinnita</td>
                                 <td>2014</td>
+                            </tr>
+                            <tr>
+                                <td class="divider" colspan="3"></td>
                             </tr>
                             <tr>
                                 <td>Cu voluptua philosophia usu, ridens oportere facilisis ius eu. Ei mei utroque delectus</td>
@@ -230,14 +239,23 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                                 <td>2013</td>
                             </tr>
                             <tr>
+                                <td class="divider" colspan="3"></td>
+                            </tr>
+                            <tr>
                                 <td>bonorum erroribus in nec</td>
                                 <td>Rorschach</td>
                                 <td>2013</td>
                             </tr>
                             <tr>
+                                <td class="divider" colspan="3"></td>
+                            </tr>
+                            <tr>
                                 <td>Quaeque conclusionemque ei nec, id eum aperiam efficiantur delicatissimi, minimum instructior vim te</td>
                                 <td>Sursee</td>
                                 <td>2014</td>
+                            </tr>
+                            <tr>
+                                <td class="divider" colspan="3"></td>
                             </tr>
                             <tr>
                                 <td> id eum aperiam efficiantur delicatissimi, minimum instructior vim te</td>
@@ -427,7 +445,7 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                 <div class="clearfix contact-inner">
                     <div class="address">
                         <h2>ADRESSE</h2>
-                        <p>Van de Wetering Atelier für Städtebau GmbH Birmensdorferstrasse 55 8004 Zürich-CH</p>
+                        <p>Van de Wetering Atelier für Städtebau GmbH Birmensdorferstrasse 55 8004 Zürich-CH</p>
                         <p>Telefon<br>
                         0041 44 245 46 09</p>
                         <p>E-mail<br> staedtebau@wetering.ch</p>
@@ -435,13 +453,13 @@ Die Erweiterung des Institutsgebäudes an der Plattenstrasse liegt an einer sta
                     </div>
                     <div class="team">
                         <h2>TEAM</h2>
-                        <p>Han van de Wetering<br> Dipl. Ing. TU Städtebau / SIA, 1974 (Partner)</p>
+                        <p>Han van de Wetering<br> Dipl. Ing. TU Städtebau / SIA, 1974 (Partner)</p>
                         <p>Roman Hanimann<br>
                         Dipl. Ing. FH Raumplanung, 1979 (Partner)</p>
                         <p>Ute Sakmann<br>
                         Dipl. Ing. FH Landschafts- architektur, 1983</p>
-                        <p>Astrid Schäfer<br>
-                        kaufm. Angestellte, Be- triebssekretärin, 1961</p>
+                        <p>Astrid Schäfer<br>
+                        kaufm. Angestellte, Be- triebssekretärin, 1961</p>
                     </div>
                 </div>
             </footer>
